XP Compiler ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
Git commit: ?????


Version 1.10.0, released 2013-05-12
-----------------------------------
Git commit: a50a7ea22e49431a6698564d0311097fe30871fb

Heads up!
~~~~~~~~~
- Changed tests using `foreach` to use @values annotation. Requires 
  parameterized unittest feature (RFC #0267) and thus XP 5.9.1
  (friebe)
- Converted the code base to namespaces
  (friebe)

RFCs
~~~~
- Implemented RFC #0252: Fluent interface compact syntax
  (friebe)
- Implemented RFC #0241: Compact method syntax
  (friebe)
- Implemented RFC #0240: Compact assignment syntax
  (friebe)

Bugfixes
~~~~~~~~
- Fixed issue #25: Resolving abstract enum members fails
  (friebe)
- Fixed various errors resulting from the conversion of the code base 
  to namespaces. Most typical: catch (Throwable $e) not catching any-
  thing, because the name "Throwable" is not present in this namespace.
  (friebe)
- Fixed issue #24: Fatal error with PHP 5.3.0
  (friebe)
- Fixed PHP 5.3 namespaces fully qualified class names
  (friebe)
- Changed TypeReflection to determine enum member type correctly
  See pull request #23
  (friebe)

Features
~~~~~~~~
- Implemented the navigation operator `?.` - see pull request #13
  (friebe)


Version 1.9.0, released 2013-05-05
----------------------------------
Git commit: 3dbbcbe2bdda440d35221ec17d98a025a2b42b54

Heads up!
~~~~~~~~~
- Gave the GitHub repository's homepage a makeover, adding installation,
  usage and contribution overviews and a small sourcecode example. See
  https://github.com/xp-framework/xp-language
  (friebe)
- Changed code no longer to use xp::$registry but instead the flattened
  version. This bumps the minimum XP Framework version to XP 5.9.0.
  See also https://github.com/xp-framework/xp-framework/pull/270
  (friebe)
- Version now detached from framework - XP compiler v1.9.0 will be the 